# Evolution-Simulation

./: CMakeLists.txt  README.md  instruction.cpp  instruction.h  main.cpp  program.cpp  program.h  txtfileparser.cpp  txtfileparser.h  utils.cpp  utils.h
common/: CMakeLists.txt  instruction.cpp  instruction.h  program.cpp  program.h  txtfileparser.cpp  utils.cpp  utils.h
common/instructions/: add.cpp  add.h  and.cpp  and.h  clear.cpp  clear.h  condition.cpp  condition.h  copy.cpp  copy.h  decrease.cpp  decrease.h  divide.cpp  divide.h  equal.cpp  equal.h  greater.cpp  greater.h  increase.cpp  increase.h  init.cpp  init.h  invert.cpp  invert.h  loop.cpp  loop.h  multiply.cpp  multiply.h  negate.cpp  negate.h  nop.cpp  nop.h  not.cpp  not.h  or_.cpp  or_.h  return.cpp  return.h  set.cpp  set.h  (+4 more)
instructions/: add.cpp  add.h  and.cpp  and.h  condition.cpp  condition.h  copy.cpp  copy.h  decrease.cpp  decrease.h  divide.cpp  divide.h  equal.cpp  equal.h  greater.cpp  greater.h  increase.cpp  increase.h  init.cpp  init.h  jump.cpp  jump.h  loop.cpp  loop.h  multiply.cpp  multiply.h  negate.cpp  negate.h  nop.cpp  nop.h  not.cpp  not.h  or.cpp  or.h  or_.cpp  or_.h  return.cpp  return.h  smaller.cpp  smaller.h  (+2 more)
simulation/: simulation.sln
simulation c#/: simulation.sln
simulation c#/simulation/: Food.cs  Program.cs  Simulation.cs
simulation c++/: animal.cpp  animal.h  evolution_sim.sln  evolution_sim.vcxproj  evolution_sim.vcxproj.filters  food.cpp  food.h  main.cpp  simulation.cpp  simulation.h
simulation/simulation/: Animal.cs  Food.cs  Instructions.cs  Program.cs  Simulation.cs  Utils.cs  simulation.csproj
simulation/simulation/Properties/: AssemblyInfo.cs
test-save-load/: CMakeLists.txt  main.cpp
